--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MYSQL_ROOT_PASSWORD = ChangeMyPassword
-MYSQL_PASSWORD = ChangeMyPassword
-WORDPRESS_DB_PASSWORD = ChangeMyPassword
+ENV_MYSQL_ROOT_PASSWORD = ChangeMyPassword
+ENV_MYSQL_PASSWORD = ChangeMyPassword
+ENV_WORDPRESS_DB_PASSWORD = ChangeMyPassword
