--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       - ./db/mysql:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ChangeMyPassword
+      MYSQL_ROOT_PASSWORD: ${ENV_MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: wordpress_db
       MYSQL_USER: user
-      MYSQL_PASSWORD: ChangeMyPassword
+      MYSQL_PASSWORD: ${ENV_MYSQL_PASSWORD}
 
   wordpress:
     image: wordpress:latest
@@ -25,7 +25,7 @@ services:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_NAME: wordpress_db
       WORDPRESS_DB_USER: user
-      WORDPRESS_DB_PASSWORD: ChangeMyPassword
+      WORDPRESS_DB_PASSWORD: ${ENV_WORDPRESS_DB_PASSWORD}
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
